--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Kaan Sadık Karadağ's Blog
 description: 'Application Security Engineer @ Kuehne+Nagel. A Cyber Security enthusiast, Computer Engineering BSc. holder, regularly participates in CTFs. Currently putting an epic battle with Cyber Security MSc. thesis.'
-baseurl: '/blog'
+baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
