Google Analytics Added

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Kaan Sadık Karadağ's Blog
 description: 'Application Security Engineer @ Kuehne+Nagel. A Cyber Security enthusiast, Computer Engineering BSc. holder, regularly participates in CTFs. Currently putting an epic battle with Cyber Security MSc. thesis.'
 baseurl: ''
-# google_analytics: 'UA-XXXXXX-X'
+google_analytics: 'UA-113548627-1'
 # disqus_shortname: 'your-disqus-name'
 
 author:
