--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: 'Application Security Engineer @ Kuehne+Nagel. A Cyber Security ent
 baseurl: ''
 google_analytics: 'UA-113548627-1'
 disqus_shortname: 'kaansk'
+URL: 'kaansk.github.io'
 
 author:
   name: 'Kaan Sadık Karadağ'
