Bio upgrade and google console

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Kaan Sadık Karadağ's Blog
-description: 'Application Security Engineer @ Kuehne+Nagel. A Cyber Security enthusiast, Computer Engineering BSc. holder, regularly participates in CTFs. Currently putting an epic battle with Cyber Security MSc. thesis.'
+description: 'Application Security Engineer @ Kuehne+Nagel.<br />Currently Living in Tallinn/Estonia.<br />A Cyber Security enthusiast, Computer Engineering BSc. holder, regularly participates in CTFs. Currently putting an epic battle with Cyber Security MSc. thesis.'
 baseurl: ''
 google_analytics: 'UA-113548627-1'
 disqus_shortname: 'kaansk'
