--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   facebook_username: 
   github_username:  kaansk
   linkedin_username:  kaansk
-  pgpkey: 'https://pgp.mit.edu/pks/lookup?op=get&search=0xC87A8F9F5B2F03CB'
+  pgpkey: 'https://pgp.circl.lu/pks/lookup?op=vindex&fingerprint=on&search=0xC87A8F9F5B2F03CB'
 
 defaults:
   -
