--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ paginate: 10
 permalink: /:year/:title/
 markdown: kramdown
 highlighter: rouge
+environment: production
 
 sass:
     sass_dir: _sass
